# cli-todo

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: unit-tests.yml
tests/: conftest.py  test_db.py  test_example.py  test_helper.py  test_todo.py
tests/resources/: test.txt  test_data.yml
todo/: db.py  example.py  helper.py  todo.py
